# f8

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
docs/: CMakeLists.txt  TODO.txt  f8_anchestors.txt  makeref.cpp  reference.md
examples/: clustering.tcl  converb.scm  cross_synth.tcl  decomp.tcl  environments.scm  environments.tcl  features.tcl  filters.tcl  functional.tcl  guess.scm  knn_class.tcl  linear_regr.tcl  maths.tcl  matmul.tcl  matops.tcl  median_flt.tcl  multi_if.tcl  onset_detection.tcl  oop_basic.scm  oop_basic.tcl  osc_like.tcl  osc_recv.maxpat  overview.tcl  pca_dim.tcl  plot1.tcl  plot2.scm  plot2.tcl  plot3.tcl  reconstruction.tcl  repl.scm  repl.tcl  reverb.tcl  sine.tcl  stft_example.tcl  streams.scm  streams.tcl  svd_dim.tcl  threads_sockets.tcl  ticks.tcl  timelines.tcl  (+2 more)
src/: CMakeLists.txt  FFT.h  core.h  f8.cpp  f8.h  learning.h  learning.tcl  numeric.h  plotting.h  plotting.tcl  signals.h  signals.tcl  stdlib.scm  stdlib.tcl  svg_tools.h  system.h  system.tcl  test.scm  tmp.h
src/learning/: KNN.h  Matrix.h  PCA.h  algorithms.h  linalg.h
src/signals/: BPF.h  FIRDesigner.h  WavFile.h  features.h
support/: eig.cpp
tests/: #basic_tests.scm#  basic_tests.scm  core_tests.tcl  def.scm  dynascope_tests.scm  dynascope_tests.tcl  letx_tests.scm  maths_tests.scm  maths_tests.tcl  norvig_tests.tcl  r4rstest.scm  recursion_tests.tcl  various.scm
